fix: fixed header overlapping issues

--- a/ComponentsStyles/modal.css
+++ b/ComponentsStyles/modal.css
@@ -1,5 +1,5 @@
 .modalBg {
-  z-index: 1;
+  z-index: 6;
   position: fixed;
   width: 100vw;
   height: 100vh;
